--- a/plumbing/format/commitgraph/BUILD.bazel
+++ b/plumbing/format/commitgraph/BUILD.bazel
@@ -24,9 +24,9 @@ go_test(
     deps = [
         ":commitgraph",
         "//plumbing",
-        "@com_github_go_git_go_billy_v5//:go-billy",
-        "@com_github_go_git_go_billy_v5//util",
-        "@com_github_go_git_go_git_fixtures_v4//:go-git-fixtures",
-        "@in_gopkg_check_v1//:check_v1",
+        "@com_github_go_git_go_billy_v5//:go_default_library",
+        "@com_github_go_git_go_billy_v5//util:go_default_library",
+        "@com_github_go_git_go_git_fixtures_v4//:go_default_library",
+        "@in_gopkg_check_v1//:go_default_library",
     ],
 )
