--- a/plumbing/format/objfile/BUILD.bazel
+++ b/plumbing/format/objfile/BUILD.bazel
@@ -26,6 +26,6 @@ go_test(
     embed = [":objfile"],
     deps = [
         "//plumbing",
-        "@in_gopkg_check_v1//:check_v1",
+        "@in_gopkg_check_v1//:go_default_library",
     ],
 )
