--- a/plumbing/protocol/packp/capability/BUILD.bazel
+++ b/plumbing/protocol/packp/capability/BUILD.bazel
@@ -17,5 +17,5 @@ go_test(
         "list_test.go",
     ],
     embed = [":capability"],
-    deps = ["@in_gopkg_check_v1//:check_v1"],
+    deps = ["@in_gopkg_check_v1//:go_default_library"],
 )
