--- a/plumbing/transport/server/BUILD.bazel
+++ b/plumbing/transport/server/BUILD.bazel
@@ -19,8 +19,8 @@ go_library(
         "//plumbing/transport",
         "//storage/filesystem",
         "//utils/ioutil",
-        "@com_github_go_git_go_billy_v5//:go-billy",
-        "@com_github_go_git_go_billy_v5//osfs",
+        "@com_github_go_git_go_billy_v5//:go_default_library",
+        "@com_github_go_git_go_billy_v5//osfs:go_default_library",
     ],
 )
 
@@ -42,7 +42,7 @@ go_test(
         "//plumbing/transport/test",
         "//storage/filesystem",
         "//storage/memory",
-        "@com_github_go_git_go_git_fixtures_v4//:go-git-fixtures",
-        "@in_gopkg_check_v1//:check_v1",
+        "@com_github_go_git_go_git_fixtures_v4//:go_default_library",
+        "@in_gopkg_check_v1//:go_default_library",
     ],
 )
