--- a/storage/test/BUILD.bazel
+++ b/storage/test/BUILD.bazel
@@ -11,7 +11,7 @@ go_library(
         "//plumbing/format/index",
         "//plumbing/storer",
         "//storage",
-        "@com_github_go_git_go_git_fixtures_v4//:go-git-fixtures",
-        "@in_gopkg_check_v1//:check_v1",
+        "@com_github_go_git_go_git_fixtures_v4//:go_default_library",
+        "@in_gopkg_check_v1//:go_default_library",
     ],
 )
