--- a/utils/merkletrie/internal/frame/BUILD.bazel
+++ b/utils/merkletrie/internal/frame/BUILD.bazel
@@ -15,6 +15,6 @@ go_test(
     deps = [
         "//utils/merkletrie/internal/fsnoder",
         "//utils/merkletrie/noder",
-        "@in_gopkg_check_v1//:check_v1",
+        "@in_gopkg_check_v1//:go_default_library",
     ],
 )
