--- a/internal/url/BUILD.bazel
+++ b/internal/url/BUILD.bazel
@@ -11,5 +11,5 @@ go_test(
     name = "url_test",
     srcs = ["url_test.go"],
     embed = [":url"],
-    deps = ["@in_gopkg_check_v1//:check_v1"],
+    deps = ["@in_gopkg_check_v1//:go_default_library"],
 )
