--- a/plumbing/BUILD.bazel
+++ b/plumbing/BUILD.bazel
@@ -24,5 +24,5 @@ go_test(
         "reference_test.go",
     ],
     embed = [":plumbing"],
-    deps = ["@in_gopkg_check_v1//:check_v1"],
+    deps = ["@in_gopkg_check_v1//:go_default_library"],
 )
