--- a/plumbing/format/diff/BUILD.bazel
+++ b/plumbing/format/diff/BUILD.bazel
@@ -24,6 +24,6 @@ go_test(
         "//plumbing",
         "//plumbing/color",
         "//plumbing/filemode",
-        "@in_gopkg_check_v1//:check_v1",
+        "@in_gopkg_check_v1//:go_default_library",
     ],
 )
