--- a/plumbing/format/index/BUILD.bazel
+++ b/plumbing/format/index/BUILD.bazel
@@ -30,8 +30,8 @@ go_test(
     deps = [
         "//plumbing",
         "//plumbing/filemode",
-        "@com_github_go_git_go_git_fixtures_v4//:go-git-fixtures",
-        "@com_github_google_go_cmp//cmp",
-        "@in_gopkg_check_v1//:check_v1",
+        "@com_github_go_git_go_git_fixtures_v4//:go_default_library",
+        "@com_github_google_go_cmp//cmp:go_default_library",
+        "@in_gopkg_check_v1//:go_default_library",
     ],
 )
