--- a/plumbing/format/pktline/BUILD.bazel
+++ b/plumbing/format/pktline/BUILD.bazel
@@ -18,6 +18,6 @@ go_test(
     ],
     deps = [
         ":pktline",
-        "@in_gopkg_check_v1//:check_v1",
+        "@in_gopkg_check_v1//:go_default_library",
     ],
 )
