--- a/plumbing/hash/BUILD.bazel
+++ b/plumbing/hash/BUILD.bazel
@@ -8,7 +8,7 @@ go_library(
     ],
     importpath = "github.com/sgnl-ai/go-git/plumbing/hash",
     visibility = ["//visibility:public"],
-    deps = ["@com_github_pjbgf_sha1cd//:sha1cd"],
+    deps = ["@com_github_pjbgf_sha1cd//:go_default_library"],
 )
 
 go_test(
