--- a/plumbing/object/BUILD.bazel
+++ b/plumbing/object/BUILD.bazel
@@ -38,8 +38,8 @@ go_library(
         "//utils/merkletrie",
         "//utils/merkletrie/noder",
         "//utils/sync",
-        "@com_github_emirpasic_gods//trees/binaryheap",
-        "@com_github_sergi_go_diff//diffmatchpatch",
+        "@com_github_emirpasic_gods//trees/binaryheap:go_default_library",
+        "@com_github_sergi_go_diff//diffmatchpatch:go_default_library",
     ],
 )
 
@@ -76,9 +76,9 @@ go_test(
         "//storage/memory",
         "//utils/merkletrie",
         "//utils/merkletrie/noder",
-        "@com_github_go_git_go_billy_v5//memfs",
-        "@com_github_go_git_go_billy_v5//util",
-        "@com_github_go_git_go_git_fixtures_v4//:go-git-fixtures",
-        "@in_gopkg_check_v1//:check_v1",
+        "@com_github_go_git_go_billy_v5//memfs:go_default_library",
+        "@com_github_go_git_go_billy_v5//util:go_default_library",
+        "@com_github_go_git_go_git_fixtures_v4//:go_default_library",
+        "@in_gopkg_check_v1//:go_default_library",
     ],
 )
