--- a/plumbing/protocol/packp/BUILD.bazel
+++ b/plumbing/protocol/packp/BUILD.bazel
@@ -58,6 +58,6 @@ go_test(
         "//plumbing/format/pktline",
         "//plumbing/hash",
         "//plumbing/protocol/packp/capability",
-        "@in_gopkg_check_v1//:check_v1",
+        "@in_gopkg_check_v1//:go_default_library",
     ],
 )
