--- a/plumbing/protocol/packp/sideband/BUILD.bazel
+++ b/plumbing/protocol/packp/sideband/BUILD.bazel
@@ -22,6 +22,6 @@ go_test(
     embed = [":sideband"],
     deps = [
         "//plumbing/format/pktline",
-        "@in_gopkg_check_v1//:check_v1",
+        "@in_gopkg_check_v1//:go_default_library",
     ],
 )
