--- a/plumbing/revlist/BUILD.bazel
+++ b/plumbing/revlist/BUILD.bazel
@@ -23,7 +23,7 @@ go_test(
         "//plumbing/object",
         "//plumbing/storer",
         "//storage/filesystem",
-        "@com_github_go_git_go_git_fixtures_v4//:go-git-fixtures",
-        "@in_gopkg_check_v1//:check_v1",
+        "@com_github_go_git_go_git_fixtures_v4//:go_default_library",
+        "@in_gopkg_check_v1//:go_default_library",
     ],
 )
