--- a/plumbing/storer/BUILD.bazel
+++ b/plumbing/storer/BUILD.bazel
@@ -27,6 +27,6 @@ go_test(
     embed = [":storer"],
     deps = [
         "//plumbing",
-        "@in_gopkg_check_v1//:check_v1",
+        "@in_gopkg_check_v1//:go_default_library",
     ],
 )
