--- a/plumbing/transport/file/BUILD.bazel
+++ b/plumbing/transport/file/BUILD.bazel
@@ -13,7 +13,7 @@ go_library(
         "//plumbing/transport/internal/common",
         "//plumbing/transport/server",
         "//utils/ioutil",
-        "@org_golang_x_sys//execabs",
+        "@org_golang_x_sys//execabs:go_default_library",
     ],
 )
 
@@ -30,7 +30,7 @@ go_test(
     deps = [
         "//plumbing/transport",
         "//plumbing/transport/test",
-        "@com_github_go_git_go_git_fixtures_v4//:go-git-fixtures",
-        "@in_gopkg_check_v1//:check_v1",
+        "@com_github_go_git_go_git_fixtures_v4//:go_default_library",
+        "@in_gopkg_check_v1//:go_default_library",
     ],
 )
