--- a/plumbing/transport/git/BUILD.bazel
+++ b/plumbing/transport/git/BUILD.bazel
@@ -24,7 +24,7 @@ go_test(
     deps = [
         "//plumbing/transport",
         "//plumbing/transport/test",
-        "@com_github_go_git_go_git_fixtures_v4//:go-git-fixtures",
-        "@in_gopkg_check_v1//:check_v1",
+        "@com_github_go_git_go_git_fixtures_v4//:go_default_library",
+        "@in_gopkg_check_v1//:go_default_library",
     ],
 )
