--- a/plumbing/transport/http/BUILD.bazel
+++ b/plumbing/transport/http/BUILD.bazel
@@ -19,7 +19,7 @@ go_library(
         "//plumbing/transport",
         "//plumbing/transport/internal/common",
         "//utils/ioutil",
-        "@com_github_golang_groupcache//lru",
+        "@com_github_golang_groupcache//lru:go_default_library",
     ],
 )
 
@@ -39,8 +39,8 @@ go_test(
         "//plumbing/transport",
         "//plumbing/transport/http/internal/test",
         "//plumbing/transport/test",
-        "@com_github_elazarl_goproxy//:goproxy",
-        "@com_github_go_git_go_git_fixtures_v4//:go-git-fixtures",
-        "@in_gopkg_check_v1//:check_v1",
+        "@com_github_elazarl_goproxy//:go_default_library",
+        "@com_github_go_git_go_git_fixtures_v4//:go_default_library",
+        "@in_gopkg_check_v1//:go_default_library",
     ],
 )
