--- a/plumbing/transport/http/internal/test/BUILD.bazel
+++ b/plumbing/transport/http/internal/test/BUILD.bazel
@@ -5,7 +5,7 @@ go_library(
     srcs = ["test_utils.go"],
     importpath = "github.com/sgnl-ai/go-git/plumbing/transport/http/internal/test",
     visibility = ["//plumbing/transport/http:__subpackages__"],
-    deps = ["@com_github_elazarl_goproxy//:goproxy"],
+    deps = ["@com_github_elazarl_goproxy//:go_default_library"],
 )
 
 go_test(
@@ -15,7 +15,7 @@ go_test(
     deps = [
         "//plumbing/transport",
         "//plumbing/transport/http",
-        "@com_github_elazarl_goproxy//:goproxy",
-        "@in_gopkg_check_v1//:check_v1",
+        "@com_github_elazarl_goproxy//:go_default_library",
+        "@in_gopkg_check_v1//:go_default_library",
     ],
 )
