--- a/plumbing/transport/internal/common/BUILD.bazel
+++ b/plumbing/transport/internal/common/BUILD.bazel
@@ -22,5 +22,5 @@ go_test(
     name = "common_test",
     srcs = ["common_test.go"],
     embed = [":common"],
-    deps = ["@in_gopkg_check_v1//:check_v1"],
+    deps = ["@in_gopkg_check_v1//:go_default_library"],
 )
