--- a/plumbing/transport/ssh/BUILD.bazel
+++ b/plumbing/transport/ssh/BUILD.bazel
@@ -11,11 +11,11 @@ go_library(
     deps = [
         "//plumbing/transport",
         "//plumbing/transport/internal/common",
-        "@com_github_kevinburke_ssh_config//:ssh_config",
-        "@com_github_skeema_knownhosts//:knownhosts",
-        "@com_github_xanzy_ssh_agent//:ssh-agent",
-        "@org_golang_x_crypto//ssh",
-        "@org_golang_x_net//proxy",
+        "@com_github_kevinburke_ssh_config//:go_default_library",
+        "@com_github_skeema_knownhosts//:go_default_library",
+        "@com_github_xanzy_ssh_agent//:go_default_library",
+        "@org_golang_x_crypto//ssh:go_default_library",
+        "@org_golang_x_net//proxy:go_default_library",
     ],
 )
 
@@ -32,14 +32,14 @@ go_test(
         "//plumbing/transport",
         "//plumbing/transport/ssh/internal/test",
         "//plumbing/transport/test",
-        "@com_github_armon_go_socks5//:go-socks5",
-        "@com_github_gliderlabs_ssh//:ssh",
-        "@com_github_go_git_go_billy_v5//osfs",
-        "@com_github_go_git_go_billy_v5//util",
-        "@com_github_go_git_go_git_fixtures_v4//:go-git-fixtures",
-        "@com_github_kevinburke_ssh_config//:ssh_config",
-        "@in_gopkg_check_v1//:check_v1",
-        "@org_golang_x_crypto//ssh",
-        "@org_golang_x_crypto//ssh/testdata",
+        "@com_github_armon_go_socks5//:go_default_library",
+        "@com_github_gliderlabs_ssh//:go_default_library",
+        "@com_github_go_git_go_billy_v5//osfs:go_default_library",
+        "@com_github_go_git_go_billy_v5//util:go_default_library",
+        "@com_github_go_git_go_git_fixtures_v4//:go_default_library",
+        "@com_github_kevinburke_ssh_config//:go_default_library",
+        "@in_gopkg_check_v1//:go_default_library",
+        "@org_golang_x_crypto//ssh:go_default_library",
+        "@org_golang_x_crypto//ssh/testdata:go_default_library",
     ],
 )
