--- a/plumbing/transport/ssh/internal/test/BUILD.bazel
+++ b/plumbing/transport/ssh/internal/test/BUILD.bazel
@@ -5,7 +5,7 @@ go_library(
     srcs = ["test_utils.go"],
     importpath = "github.com/sgnl-ai/go-git/plumbing/transport/ssh/internal/test",
     visibility = ["//plumbing/transport/ssh:__subpackages__"],
-    deps = ["@com_github_gliderlabs_ssh//:ssh"],
+    deps = ["@com_github_gliderlabs_ssh//:go_default_library"],
 )
 
 go_test(
@@ -15,10 +15,10 @@ go_test(
     deps = [
         "//plumbing/transport",
         "//plumbing/transport/ssh",
-        "@com_github_armon_go_socks5//:go-socks5",
-        "@com_github_gliderlabs_ssh//:ssh",
-        "@com_github_go_git_go_git_fixtures_v4//:go-git-fixtures",
-        "@in_gopkg_check_v1//:check_v1",
-        "@org_golang_x_crypto//ssh",
+        "@com_github_armon_go_socks5//:go_default_library",
+        "@com_github_gliderlabs_ssh//:go_default_library",
+        "@com_github_go_git_go_git_fixtures_v4//:go_default_library",
+        "@in_gopkg_check_v1//:go_default_library",
+        "@org_golang_x_crypto//ssh:go_default_library",
     ],
 )
