--- a/storage/filesystem/dotgit/BUILD.bazel
+++ b/storage/filesystem/dotgit/BUILD.bazel
@@ -20,8 +20,8 @@ go_library(
         "//plumbing/hash",
         "//storage",
         "//utils/ioutil",
-        "@com_github_go_git_go_billy_v5//:go-billy",
-        "@com_github_go_git_go_billy_v5//osfs",
+        "@com_github_go_git_go_billy_v5//:go_default_library",
+        "@com_github_go_git_go_billy_v5//osfs:go_default_library",
     ],
 )
 
@@ -37,10 +37,10 @@ go_test(
         "//plumbing",
         "//plumbing/format/idxfile",
         "//plumbing/format/packfile",
-        "@com_github_go_git_go_billy_v5//:go-billy",
-        "@com_github_go_git_go_billy_v5//osfs",
-        "@com_github_go_git_go_billy_v5//util",
-        "@com_github_go_git_go_git_fixtures_v4//:go-git-fixtures",
-        "@in_gopkg_check_v1//:check_v1",
+        "@com_github_go_git_go_billy_v5//:go_default_library",
+        "@com_github_go_git_go_billy_v5//osfs:go_default_library",
+        "@com_github_go_git_go_billy_v5//util:go_default_library",
+        "@com_github_go_git_go_git_fixtures_v4//:go_default_library",
+        "@in_gopkg_check_v1//:go_default_library",
     ],
 )
