--- a/storage/memory/BUILD.bazel
+++ b/storage/memory/BUILD.bazel
@@ -20,6 +20,6 @@ go_test(
     embed = [":memory"],
     deps = [
         "//storage/test",
-        "@in_gopkg_check_v1//:check_v1",
+        "@in_gopkg_check_v1//:go_default_library",
     ],
 )
