--- a/utils/binary/BUILD.bazel
+++ b/utils/binary/BUILD.bazel
@@ -20,6 +20,6 @@ go_test(
     embed = [":binary"],
     deps = [
         "//plumbing",
-        "@in_gopkg_check_v1//:check_v1",
+        "@in_gopkg_check_v1//:go_default_library",
     ],
 )
