--- a/utils/merkletrie/BUILD.bazel
+++ b/utils/merkletrie/BUILD.bazel
@@ -28,6 +28,6 @@ go_test(
         ":merkletrie",
         "//utils/merkletrie/internal/fsnoder",
         "//utils/merkletrie/noder",
-        "@in_gopkg_check_v1//:check_v1",
+        "@in_gopkg_check_v1//:go_default_library",
     ],
 )
