--- a/utils/merkletrie/noder/BUILD.bazel
+++ b/utils/merkletrie/noder/BUILD.bazel
@@ -18,7 +18,7 @@ go_test(
     ],
     embed = [":noder"],
     deps = [
-        "@in_gopkg_check_v1//:check_v1",
-        "@org_golang_x_text//unicode/norm",
+        "@in_gopkg_check_v1//:go_default_library",
+        "@org_golang_x_text//unicode/norm:go_default_library",
     ],
 )
